src/test/deca/syntax/invalid/sansobjet/Inf11.deca
//Inf11.deca:5:5: mismatched input '<' expecting {
//Description:  inf sans droite
//Resultat: Erreur ligne 5
{
     <  12 ;
}
